<resources>
    <string name="app_name">QbStore</string>
    <string name="home">首页</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>
    <string name="management">管理</string>
    <string name="login">登录/注册 〉</string>
    <string name="order">我的订单</string>
    <string name="payment">代付款</string>
    <string name="after_sales"> 售后</string>
    <string name="evaluation"> 评价</string>
    <string name="deliver_goods">待发货</string>
    <string name="wait_goods">待收货</string>
    <string name="account">请输入账户</string>
    <string name="password">请输入密码</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="personal_information">个人信息</string>
    <string name="address">地址管理</string>
    <string name="about">关于</string>
    <string name="network_no_data">数据获取不到</string>
    <string name="input_canno_null">请输入合法的账号和密码</string>
    <string name="only_login">登录</string>
    <string name="register">注册</string>
    <string name="regiseter">注册</string>
    <string name="common">公共</string>
    <string name="all_order">全部订单</string>
    <string name="user_name">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="user_id">用户名</string>
    <string name="wallet">钱包</string>
    <string name="loginout">确认退出</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="register_success">注册成功</string>
    <string name="change_sex">修改性别</string>
    <string name="canno_change_user_id">用户名不可以修改呦！</string>
    <string name="change">确认修改</string>
    <string name="user_name_canno_null">用户名不能为空</string>
    <string name="modify_successfully">修改成功</string>
    <string name="change_age">修改年龄</string>
    <string name="modify_the_head_picture">修改头像</string>
    <string name="content_restriction">4–10个字符，可由中文、英文、数字组成</string>
    <string name="change_nickname">修改昵称</string>
    <string name="please_enter_nickname">请输入昵称</string>
    <string name="sure">确定</string>
    <string name="Age_range">年龄范围 1~~150</string>
    <string name="input_age">请输入年龄</string>
    <string name="you_denied_permission">你拒绝了权限</string>
    <string name="failed_to_get_image">获取图片失败</string>
    <string name="fail_net">修改失败，请确认是否连接网络</string>
    <string name="classification">分类</string>
    <string name="fensifuli">粉丝福利社</string>
    <string name="free_flrut">免费领水果</string>
    <string name="charge">充值中心</string>
    <string name="juhuasuan">聚划算</string>
    <string name="eleme">饿了么</string>
    <string name="jingdong">京东</string>
    <string name="tainmao">天猫</string>
    <string name="tianmaojinkou">天猫进口</string>
    <string name="net_exception">网络连接异常，请稍后再试或检查网络</string>
    <string name="login_out_success">退出成功</string>
    <string name="loading">努力加载中</string>
    <string name="des">converse匡威官方One star 低帮板鞋 163245C 最新款式 限量版</string>

</resources>
