<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_mine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_white"
    >

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mysdk.view.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="@dimen/dimen_70dp"
            android:layout_height="@dimen/dimen_70dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:src="@drawable/ic_login" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:layout_marginLeft="@dimen/dimen_10dp"

            />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >

           <ImageView
               android:id="@+id/iv_setting"
               android:layout_width="@dimen/dimen_25dp"
               android:layout_height="@dimen/dimen_25dp"
               android:src="@drawable/ic_setting"
               android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
               android:layout_marginRight="@dimen/dimen_15dp"
               />
       </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll_login"
        android:layout_marginTop="@dimen/dimen_10dp"
        >
        <RelativeLayout
            android:id="@+id/rl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textSize="@dimen/dimen_20sp"
                android:textColor="@color/color_000000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dimen_20dp"
                />
            <TextView
                android:id="@+id/tv_all_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="查看全部订单"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_20dp"
                />
        </RelativeLayout>



     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/dimen_20dp"


         >

         <TextView
             android:id="@+id/tv_pay"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_payment_red"
             android:text="@string/payment"
            android:drawablePadding="@dimen/dimen_5dp"
             android:textSize="@dimen/dimen_12sp"
             />

         <TextView
             android:id="@+id/tv_deliver_goods"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_drop_shipping_red2"
             android:text="@string/deliver_goods"
             android:textSize="@dimen/dimen_12sp"
             android:drawablePadding="@dimen/dimen_5dp"
             />


         <TextView
             android:id="@+id/tv_take_back_goods"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_for_the_goods_red"
             android:text="@string/wait_goods"
             android:textSize="@dimen/dimen_12sp"
             android:drawablePadding="@dimen/dimen_5dp"
             />

         <TextView
             android:id="@+id/tv_evaluate"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_evaluation_red2"
             android:text="@string/evaluation"
             android:textSize="@dimen/dimen_12sp"
             android:drawablePadding="@dimen/dimen_5dp"
             />
         <TextView
             android:id="@+id/tv_after_sales"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_after_sales_red"
             android:text="@string/after_sales"
             android:textSize="@dimen/dimen_12sp"
             android:drawablePadding="@dimen/dimen_5dp"
             />

     </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/color_cdcdcd"
            android:layout_above="@+id/ll_layout"
            android:layout_marginTop="@dimen/dimen_20dp"
            />
    </LinearLayout>
</RelativeLayout>