<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:background="@color/color_white"
    >

    <FrameLayout
        android:id="@+id/fl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_menu"

        >
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/color_cdcdcd"
        android:layout_above="@+id/ll_menu"
        />
    <LinearLayout
        android:paddingTop="@dimen/dimen_5dp"
        android:id="@+id/ll_menu"
        android:layout_marginBottom="@dimen/dimen_3dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <TextView
            android:id="@+id/tv_home"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:drawablePadding="@dimen/dimen_3dp"
            android:drawableTop="@drawable/ic_home"
            android:textSize="@dimen/dimen_10sp"
            />

        <TextView
            android:id="@+id/tv_shopping_cart"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:drawableTop="@drawable/ic_shopping"
            android:drawablePadding="@dimen/dimen_3dp"
            android:textSize="@dimen/dimen_10sp"
            />


        <TextView
            android:id="@+id/tv_mine"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:drawableTop="@drawable/ic_mine"
            android:drawablePadding="@dimen/dimen_3dp"
            android:textSize="@dimen/dimen_10sp"
            />



    </LinearLayout>

</RelativeLayout>