<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_top_layout">

    </include>


    <LinearLayout
        android:layout_below="@+id/common_top_layout"
        android:id="@+id/ll_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_activity_setting"
        android:layout_marginTop="@dimen/dimen_15dp"
        >

        <TextView
            android:id="@+id/tv_personal_information"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mine"
            android:text="@string/personal_information"
            android:textSize="@dimen/dimen_16sp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:drawablePadding="@dimen/dimen_8dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/ECECEC"
            android:layout_below="@+id/tv_personal_information"
            android:layout_marginTop="@dimen/dimen_15dp"
            />


        <TextView
            android:id="@+id/tv_address"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/dimen_8dp"
            android:text="@string/address"
            android:textSize="@dimen/dimen_16sp"

            android:layout_marginTop="@dimen/dimen_15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/ECECEC"
            android:layout_below="@+id/tv_address"
            android:layout_marginTop="@dimen/dimen_15dp"
            />


        <TextView
            android:id="@+id/tv_about"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_about"
            android:drawablePadding="@dimen/dimen_8dp"
            android:text="@string/about"
            android:textSize="@dimen/dimen_16sp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/ll_info_layout"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/bg_activity_logout"
        >


        <TextView
            android:id="@+id/tv_logout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="@dimen/dimen_18sp"
            android:textColor="@color/d81e06"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            />

    </LinearLayout>



</RelativeLayout>