<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <include layout="@layout/common_top_layout">

    </include>

    <LinearLayout
        android:id="@+id/ll_personal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/common_top_layout"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/bg_activity_setting"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_head_img_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_centerVertical="true"
                android:text="头像"
                android:textSize="@dimen/dimen_16sp" />

            <com.mysdk.view.CircleImageView
                android:id="@+id/civ_head"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_login" />

            <View
                android:layout_below="@+id/civ_head"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@color/ECECEC" />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_user_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/user_id"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:text="2843739"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/ECECEC" />


        <RelativeLayout
            android:id="@+id/rl_user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/user_name"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:text="世勋"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/ECECEC" />



        <RelativeLayout
            android:id="@+id/rl_sex_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/sex"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:text="保密"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/ECECEC" />

        <RelativeLayout
            android:id="@+id/rl_age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/age"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:text="18"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/ECECEC" />



        <RelativeLayout
            android:id="@+id/rl_wallet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/wallet"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/tv_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_18dp"
                android:text="10000元"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/ECECEC" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm_change"
        android:layout_marginLeft="@dimen/dimen_18dp"
        android:layout_marginRight="@dimen/dimen_18dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_below="@+id/ll_personal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textSize="16sp"
        android:padding="@dimen/dimen_10dp"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:background="@drawable/bg_activity_login_view"
        />


</RelativeLayout>